<resources>
    <string name="app_name">Vacunación Perú</string>
    <string name="todo">todo</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="locales_de_vacunaci_n">Locales de vacunación</string>
    <string name="usuarios">Usuarios</string>
    <string name="vacunas">Vacunas</string>
    <string name="campa_as">Campañas</string>
    <string name="avance_de_vacunaci_n">Avance de vacunación</string>
    <string name="locales_de_vacunaci_n2">Locales de vacunación</string>
    <string name="consulta_dni">Consulta Dni</string>
    <string name="title_activity_maps">Map</string>
    <string name="seleccione_el_local_de_vacunaci_n">Seleccione el local de vacunación</string>
    <string name="local_de_vacunacion">Local de vacunacion</string>
    <string name="ingrese_su_n_mero">Ingrese su número</string>
    <string name="para_recuperar_su_clave_ingrese_su_n_mero_de_celular">Para recuperar su clave ingrese su número de celular</string>
    <string name="olvid_mi_contrase_a">Olvidé mi contraseña</string>
</resources>