<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_baseline_assignment_ind_24"
            android:title="@string/usuarios" />
        <item
            android:id="@+id/nav_local_vaccination"
            android:icon="@drawable/ic_baseline_playlist_add_check_24"
            android:title="@string/locales_de_vacunaci_n" />
        <item
            android:id="@+id/nav_vaccination"
            android:icon="@drawable/ic_baseline_medical_services_24"
            android:title="@string/vacunas" />
        <item
            android:id="@+id/nav_campaign"
            android:icon="@drawable/ic_baseline_event_available_24"
            android:title="@string/campa_as" />
        <item
            android:id="@+id/nav_advance_vaccination"
            android:icon="@drawable/ic_baseline_assistant_24"
            android:visible="false"
            android:title="@string/avance_de_vacunaci_n" />

        <item
            android:id="@+id/nav_consulta"
            android:icon="@drawable/ic_baseline_chrome_reader_mode_24"
            android:title="@string/consulta_dni" />
    </group>
</menu>