<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_user">

    <fragment
        android:id="@+id/nav_user"
        android:name="com.durand.vacunacionperu.ui.users.UserFragment"
        android:label="@string/usuarios"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/nav_local_vaccination"
        android:name="com.durand.vacunacionperu.ui.local_vaccination.LocalVaccinationFragment"
        android:label="@string/locales_de_vacunaci_n"
        tools:layout="@layout/fragment_local_vaccination" />
    <fragment
        android:id="@+id/nav_vacci_update"
        android:name="com.durand.vacunacionperu.ui.vaccination.update.UpdateVaccinationFragment"
        android:label="@string/vacunas"
        tools:layout="@layout/update_vaccination_fragment" />
    <fragment
        android:id="@+id/nav_vaccinwation"
        android:name="com.durand.vacunacionperu.ui.vaccination.add.AddVaccinationFragment"
        android:label="@string/vacunas"
        tools:layout="@layout/add_vaccination_fragment" />

    <fragment
        android:id="@+id/nav_vaccination"
        android:name="com.durand.vacunacionperu.ui.vaccination.VaccinationFragment"
        android:label="@string/vacunas"
        tools:layout="@layout/fragment_vaccination" >

        <action
            android:id="@+id/action_nav_vaccination_to_nav_vaccinwation"
            app:popUpToInclusive="false"
            android:label="@string/vacunas"
            app:popUpTo="@+id/nav_vaccination"
            app:destination="@id/nav_vaccinwation" />
        <action
            android:id="@+id/action_nav_vaccination_to_nav_vacci_update"
            app:popUpToInclusive="false"
            android:label="@string/vacunas"
            app:popUpTo="@+id/nav_vaccination"
            app:destination="@id/nav_vacci_update" />
    </fragment>

    <fragment
        android:id="@+id/nav_campaign"
        android:name="com.durand.vacunacionperu.ui.campaign.CampaignFragment"
        android:label="@string/campa_as"
        tools:layout="@layout/fragment_campaign" >

        <action
            android:id="@+id/add_campaign_fragments"
            app:popUpToInclusive="false"
            app:popUpTo="@+id/nav_campaign"
            app:destination="@id/nav_add_campaign" />
        <action
            android:id="@+id/action_nav_campaign_to_nav_update_campaign"
            app:popUpToInclusive="false"
            app:popUpTo="@+id/nav_campaign"
            app:destination="@id/nav_update_campaign" />

    </fragment>


    <fragment
        android:id="@+id/nav_update_campaign"
        android:name="com.durand.vacunacionperu.ui.campaign.update.UpdateCampaignFragment"
        android:label="@string/campa_as"
        tools:layout="@layout/update_campaign_fragment" />


    <fragment
        android:id="@+id/nav_add_campaign"
        android:name="com.durand.vacunacionperu.ui.campaign.add.AddCampaignFragment"
        android:label="@string/campa_as"
        tools:layout="@layout/add_campaign_fragment" />

    <fragment
        android:id="@+id/nav_advance_vaccination"
        android:name="com.durand.vacunacionperu.ui.close.CloseFragment"
        android:label="@string/avance_de_vacunaci_n"
        tools:layout="@layout/fragment_advance_vaccination" />

    <fragment
        android:id="@+id/nav_consulta"
        android:name="com.durand.vacunacionperu.ui.consulta.ConsultaDniFragment"
        android:label="@string/consulta_dni"
        tools:layout="@layout/consulta_dni_fragment" />
</navigation>